@@ -114,6 +114,7 @@ ChannelCLIDict = {
 "photo11":"Photo 1.1",
 "regionselect":"Region Select",
 "shashin":"Shashin Channel",
+"skyward":"Skyward Sword Fix",
 "shop":"Shop",
 "todaytomorrow":"Today & Tomorrow",
 "tvfriend":"TV Friend / G-Guide",
@@ -141,6 +142,7 @@ ChannelJAPDict = {
 "Region Select":"0001000848414C4A",
 "Shashin Channel":"000100014843424A",
 "Shop":"0001000248414241",
+"Skyward Sword Fix":"000100014843524A",
 "Today & Tomorrow":"000100014841564A",
 "TV Friend / G-Guide":"0001000148424E4A",
 "Weather":"000100024841464A",
@@ -168,6 +170,7 @@ ChannelJAPVerDict = {
 "Region Select":"1, 2",
 "Shashin Channel":"latest",
 "Shop":"3, 4, 5, 6, 7, 8, 10, 13, 16,\n17, 18, 19, 20, 21",
+"Skyward Sword Fix":"latest",
 "Today & Tomorrow":"latest",
 "TV Friend / G-Guide":"latest",
 "Weather":"3, 6, 7",
@@ -192,6 +195,7 @@ ChannelPALDict = {
 "Photo 1.1":"0001000248415950",
 "Region Select":"0001000848414C50",
 "Shop":"0001000248414241",
+"Skyward Sword Fix":"0001000148435250",
 "Today & Tomorrow":"0001000148415650",
 "Weather":"0001000248414650",
 "Wii Speak":"0001000148434650",
@@ -215,6 +219,7 @@ ChannelPALVerDict = {
 "Photo 1.1":"1, 2, 3",
 "Region Select":"1, 2",
 "Shop":"3, 4, 5, 6, 7, 8, 10, 13, 16,\n17, 18, 19, 20, 21",
+"Skyward Sword Fix":"latest",
 "Today & Tomorrow":"latest",
 "Weather":"3, 6, 7",
 "Wii Speak":"1, 256, 512",
@@ -236,6 +241,7 @@ ChannelUSADict = {
 "Photo 1.1":"0001000248415945",
 "Region Select":"0001000848414C45",
 "Shop":"0001000248414241",
+"Skyward Sword Fix":"0001000148435245",
 "Today & Tomorrow":"0001000148415645",
 "Weather":"0001000248414645",
 "Wii Speak":"0001000148434645",
@@ -258,6 +264,7 @@ ChannelUSAVerDict = {
 "Photo 1.1":"1, 2, 3",
 "Region Select":"1, 2",
 "Shop":"3, 4, 5, 6, 7, 8, 10, 13, 16,\n17, 18, 19, 20, 21",
+"Skyward Sword Fix":"latest",
 "Today & Tomorrow":"latest",
 "Weather":"3, 6, 7",
 "Wii Speak":"1, 256, 512",
